<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen_bg"
    tools:context=".fragment.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="123dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rc_light"
        android:textStyle="bold"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ls_btn"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:text="@string/lw"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rc_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/latest_bg"
            app:layout_constraintBottom_toTopOf="@+id/tw_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tw_btn"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/tw"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rc_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/tw_bg"
            app:layout_constraintBottom_toTopOf="@+id/fav_btn"
            app:layout_constraintEnd_toEndOf="@+id/ls_btn"
            app:layout_constraintStart_toStartOf="@+id/ls_btn"
            app:layout_constraintTop_toBottomOf="@+id/ls_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fav_btn"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/fav"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rc_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/fav_bg"
            app:layout_constraintBottom_toTopOf="@+id/rs_btn"
            app:layout_constraintEnd_toEndOf="@+id/tw_btn"
            app:layout_constraintStart_toStartOf="@+id/tw_btn"
            app:layout_constraintTop_toBottomOf="@+id/tw_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rs_btn"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/rs"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:fontFamily="@font/rc_regular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rs_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fav_btn"
            app:layout_constraintStart_toStartOf="@+id/fav_btn"
            app:layout_constraintTop_toBottomOf="@+id/fav_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


