<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.SetWallpaper">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rc_regular"
            android:text="@string/set_wallpaper"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lavImageLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="center"
                app:lottie_fileName="skeleton_loading_1.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivWallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/full_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/fab_background"
                    android:contentDescription="@string/floating_button"
                    android:focusable="true"
                    android:src="@drawable/ic_fab_share"
                    android:visibility="invisible"
                    app:shapeAppearanceOverlay="@style/fab_square_rounded" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/fab_background"
                    android:contentDescription="@string/floating_button"
                    android:focusable="true"
                    android:src="@drawable/ic_fab_download"
                    android:visibility="invisible"
                    app:shapeAppearanceOverlay="@style/fab_square_rounded" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabWallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/fab_background"
                    android:contentDescription="@string/floating_button"
                    android:focusable="true"
                    android:src="@drawable/ic_fab_wallpaper"
                    android:visibility="invisible"
                    app:shapeAppearanceOverlay="@style/fab_square_rounded" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/fab_background"
                    android:contentDescription="@string/floating_button"
                    android:focusable="true"
                    android:src="@drawable/ic_fab_fav"
                    android:tint="@color/black"
                    android:visibility="invisible"
                    app:shapeAppearanceOverlay="@style/fab_square_rounded" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@color/white"
                    android:contentDescription="@string/floating_button"
                    android:focusable="true"
                    android:src="@drawable/ic_floating_icon"
                    android:tint="@android:color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>